--- a/style.css
+++ b/style.css
@@ -1,94 +1,330 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    line-height:1;
+  line-height: 1;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 nav ul {
-    list-style:none;
+  list-style: none;
 }
 
-blockquote, q {
-    quotes:none;
+ul {
+  list-style: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 
 a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
 /* change colours to suit your needs */
 ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
 }
 
 /* change colours to suit your needs */
 mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
 }
 
 del {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
 }
 
 table {
-    border-collapse:collapse;
-    border-spacing:0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* change border colour to suit your needs */
 hr {
-    display:block;
-    height:1px;
-    border:0;  
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
-input, select {
-    vertical-align:middle;
+input,
+select {
+  vertical-align: middle;
+}
+
+/* //////////////////////////End CSS Reset////////////////////////// */
+
+.wrapper {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+header {
+  background-color: #151515;
+}
+
+header:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+#logo {
+  background: url("./images/logo.png") no-repeat;
+  height: 70px;
+  width: 285px;
+  float: left;
+  text-indent: -10000px;
+}
+
+header nav {
+  float: right;
+  margin-top: 30px;
+  margin-right: 10px;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header nav h2 {
+  height: 0;
+  text-indent: -10000px;
+}
+
+header nav li {
+  float: left;
+  margin-left: 20px;
+}
+
+header nav span {
+  color: green;
+  margin-left: 20px;
+}
+
+#lead-banner img {
+  width: 100%;
+}
+
+#lead-banner {
+  max-height: 440px;
+  overflow: hidden;
+  position: relative;
+}
+
+.banner-overlay {
+  position: absolute;
+  top: 20%;
+  width: 100%;
+}
+
+.banner-title {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 72px;
+}
+
+#lead-banner p {
+  color: #fff;
+  font-size: 24px;
+  max-width: 600px;
+  margin-top: 10px;
+}
+
+#lead-banner a {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#43968b+1,299a0b+100 */
+  background: #43968b; /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    #43968b 1%,
+    #299a0b 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #43968b 1%,
+    #299a0b 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #43968b 1%,
+    #299a0b 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#43968b', endColorstr='#299a0b',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  display: block;
+  width: 200px;
+  font-size: 18px;
+  text-align: center;
+  padding: 16px 0;
+  text-decoration: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin-top: 30px;
+  box-shadow: 1px 1px 6px rgba(0,0,0,0.4);
+}
+
+section{
+  margin: 40px 0 60px;
+}
+
+section::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
+section#points-of-sale ul{
+  list-style-type: none;
+
+}
+
+#points-of-sale h2{
+  height: 0;
+  text-indent: -10000px;
+}
+
+#points-of-sale li {
+  float: left;
+  width: 32%
+}
+
+#points-of-sale li:nth-child(2){
+  margin: 0 2%;
+}
+
+#points-of-sale li h3{
+  text-align: center;
+  color: #888;
+  font-size: 24px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
+#points-of-sale p{
+  text-align: center;
+  width: 80%;
+  margin: 0 10%;
+  font-size: 14px;
+  color: #888;
+  line-height: 1.4em;
 }
