--- a/style.css
+++ b/style.css
@@ -330,12 +330,12 @@ section#points-of-sale ul{
   line-height: 1.4em;
 }
 
-#clients {
+#clients, #contact{
   border-top: 1px solid #ccc;
   padding-top: 30px;
 }
 
-#clients h2{
+#clients h2, #contact h2{
   background: rgb(101, 184, 101);
   color: #fff;
   padding: 8px;
@@ -364,4 +364,78 @@ section#points-of-sale ul{
   color: #888;
   padding-top: 50px;
   background: url(./images/quotes.png) no-repeat;
+}
+
+#contact-methods{
+  float: left;
+}
+
+#contact-methods li{
+  list-style-type: none;
+  color: #888;
+  line-height: 30px;
+  clear: left;
+}
+
+#contact-methods li:before{
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  float: left;
+  margin-right: 10px;
+}
+
+#contact-methods li:nth-child(1):before{
+  background: url('./images/phone.png') no-repeat;
+}
+
+#contact-methods li:nth-child(2):before{
+  background: url('./images/mail.png') no-repeat;
+}
+
+#contact-methods li:nth-child(3):before{
+  background: url('./images/geo.png') no-repeat;
+}
+
+#contact img {
+  float: right;
+}
+
+#social-nav{
+  clear: both;
+  position: relative;
+  top: -40px;
+}
+
+#social-nav li {
+  list-style-type: none;
+  float: left;
+  width: 50px;
+  height: 50px;
+  text-indent: -10000px;
+}
+
+#social-nav li:nth-child(1){
+  background: url('./images/facebook.png') no-repeat;
+}
+
+#social-nav li:nth-child(2){
+  background: url('./images/twitter1.png') no-repeat;
+}
+
+
+#social-nav li:nth-child(3){
+  background: url('./images/pinterest.png') no-repeat;
+}
+
+
+#social-nav li:nth-child(4){
+  background: url('./images/linkedin.png') no-repeat;
+}
+
+#social-nav a{
+  display: block;
+  width: 100%;
+  height: 100%;
 }
